--- a/app/components/tab/style.less
+++ b/app/components/tab/style.less
@@ -1,6 +1,6 @@
 .content-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     height: 100%; 
 }
