--- a/app/components/rank/style.less
+++ b/app/components/rank/style.less
@@ -4,16 +4,61 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 0.24rem;
+        padding: 0 1rem;
         height: 0.8rem;
         font-size: 0.34rem;    
     }
 
-    .active-color {
+    .nav_active{
         color: #175cd4;
     }
 
-    .normal-color {
+    .nav_normal {
         color: #666;
+    }
+
+    ul {
+        text-align: center;
+        background: #F4F4F7!important;
+    }
+
+    li {
+        display: flex;
+        padding: 0 0.5rem;
+        justify-content: space-around;
+        align-items: center;
+        height: 0.96rem;
+        font-size: .26rem;
+        border-bottom: .01rem solid #ECECF1;
+
+        &.li_title {
+            height: .64rem;
+            border-bottom-color: #DCDDE1;
+            background: #EBECEF;
+        }
+
+        span {
+            display: inline-block;
+            position: relative;
+            width: 1.4rem;
+
+            &:nth-of-type(1) {
+                text-align: left;
+                padding-left: 0.2rem;
+                width: 1.7rem;
+            }
+        }
+
+        .rank-number {
+            display: inline-block;
+            margin-right: 0.1rem;
+            width: .3rem;
+            height: .3rem;
+            line-height: 0.3rem;
+            //background-color: #F3BF2E;
+            text-align: center;
+            color: #fff;
+            font-size: 0.2rem;
+        }
     }
 }
