--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div id="app"></div>
-
+    <!-- <script src="http://localhost:3000/dist/common.bundle.js"></script> -->
     <script src="http://localhost:3000/dist/main.bundle.js"></script>
 </body>
 </html>
